--- a/web/index.html
+++ b/web/index.html
@@ -27,7 +27,7 @@
 <link rel="icon" href="/favicon.ico" sizes="any">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-  <title>ai_mitra</title>
+  <title>AI मित्र</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
